--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+body,
+html {
+  margin: 0;
+  height: 100vh;
+  font-size: 0.9em;
+  background-color: #282c34;
+}
